[package]
name = "neural-doc-flow"
version = "0.1.0"
edition = "2021"
authors = ["DAA Neural Coordinator"]
description = "Integrated neural document processing pipeline with DAA coordination"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
regex = "1.0"

# Local dependencies
neural-doc-flow-coordination = { path = "../neural-doc-flow-coordination" }
neural-doc-flow-processors = { path = "../neural-doc-flow-processors" }

# Document processing dependencies
pdf = { version = "0.8", optional = true }
lopdf = { version = "0.26", optional = true }
image = { version = "0.24", optional = true }
tesseract = { version = "0.13", optional = true }

# Performance utilities
rayon = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"

# Performance monitoring
metrics = { version = "0.21", optional = true }

[features]
default = []
pdf-processing = ["pdf", "lopdf"]
ocr = ["image", "tesseract"]
monitoring = ["metrics"]

[lib]
name = "neural_doc_flow"
path = "lib.rs"